# malz-lang

./: CMakeLists.txt  chunk.cpp  chunk.hpp  debug.cpp  debug.hpp  ir.cpp  ir.hpp  main.cpp  value.hpp
malz-lang/: Cargo.toml  chunk.hpp  debug.hpp  helpers.hpp  ir.cpp  ir.hpp  optimizer.cpp  optimizer.hpp  vm.cpp  vm.hpp
malz-lang/src/: chunk.rs  debug.rs  main.rs  vm.rs
src/: main.rs
tests/: ir_test.cpp  optimizer_test.cpp
